update img bg pages

--- a/product-child.html
+++ b/product-child.html
@@ -80,6 +80,7 @@
         <main class="mainwrapper">
             <section class="bg__productchild-page">
                 <div class="bg__top">
+                    <img src="./img/bg__product-detail.jpg" alt="">
                     <div class="header__mini">
                         <p>Furnitown</p>
                         <div class="share">
