--- a/product.html
+++ b/product.html
@@ -86,6 +86,7 @@
         <!-- Example HTML -->
         <section class="bg__product-page">
             <div class="bg__top">
+                <img src="./img/bg__product.jpg" alt="">
                 <div class="header__mini">
                     <p>Furnitown</p>
                     <div class="share">
