--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Contact</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
     <meta name="title" content="" />
     <meta name="description" content="" />
 
@@ -19,213 +21,224 @@
     <meta property="og:site_name" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="stylesheet" href="dest/style.min.css">
-    <link rel="stylesheet" href="dest/fonts.css">
-</head>
+    <link rel="stylesheet" href="dest/style.min.css" />
+    <link rel="stylesheet" href="dest/fonts.css" />
+  </head>
 
-<!-- Mỗi body của mỗi page nên có class ví dụ homepage, aboutpage, contactpage... -->
+  <!-- Mỗi body của mỗi page nên có class ví dụ homepage, aboutpage, contactpage... -->
 
-<body class="contactpage">
+  <body class="contactpage">
     <!-- HEADER -->
     <header>
-        <div class="main__header">
-            <div class="container container__desktop">
-                <div class="menu__left">
-                    <ul>
-                        <li><a href="./index.html">Furnitown</a></li>
-                        <li><a href="./product.html">Sản phẩm</a></li>
-                        <li><a href="./dichvu.html">Dịch vụ</a></li>
-                    </ul>
-                </div>
-                <div class="logo"><a href="./index.html"><img src="./img/logo__full-footer.png" alt=""></a></div>
-                <div class="menu__right">
-                    <ul>
-                        <li><a href="./project.html">Dự án</a></li>
-                        <li><a href="./news.html">Tin tức</a></li>
-                        <li><a href="./contact.html">Liên hệ</a></li>
-                    </ul>
-                </div>
-            </div>
+      <div class="main__header">
+        <div class="container container__desktop">
+          <div class="menu__left">
+            <ul>
+              <li><a href="./index.html">Furnitown</a></li>
+              <li><a href="./product.html">Sản phẩm</a></li>
+              <li><a href="./dichvu.html">Dịch vụ</a></li>
+            </ul>
+          </div>
+          <div class="logo">
+            <a href="./index.html"
+              ><img src="./img/logo__full-footer.png" alt=""
+            /></a>
+          </div>
+          <div class="menu__right">
+            <ul>
+              <li><a href="./project.html">Dự án</a></li>
+              <li><a href="./news.html">Tin tức</a></li>
+              <li><a href="./contact.html">Liên hệ</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="main__header-mobile">
-            <div class="container__mobile">
-                <div class="left">
-                    <span></span>
-                    <div class="sub__nav-menu">
-                        <div class="nav__menu">
-                            <div class="nav__header">
-                                <div class="followus">
-                                    <p>Follow us</p>
-                                    <i><img src="./img/email.png" alt=""></i>
-                                    <i><img src="./img/facebook.png" alt=""></i>
-                                </div>
-                            </div>
-                            <div class="nav__content">
-                                <div class="nav__list-menu">
-                                    <ul>
-                                        <li><a href="./index.html">Furnitown</a></li>
-                                        <li><a href="./product.html">Sản phẩm</a></li>
-                                        <li><a href="./dichvu.html">Dịch vụ</a></li>
-                                        <li><a href="./project.html">Dự án</a></li>
-                                        <li><a href="./contact.html">Liên hệ</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+      </div>
+      <div class="main__header-mobile">
+        <div class="container__mobile">
+          <div class="left">
+            <span></span>
+            <div class="sub__nav-menu">
+              <div class="nav__menu">
+                <div class="nav__header">
+                  <div class="followus">
+                    <p>Follow us</p>
+                    <i><img src="./img/email.png" alt="" /></i>
+                    <i><img src="./img/facebook.png" alt="" /></i>
+                  </div>
                 </div>
-                <div class="logo-right">
-                    <i><a href="/index.html"><img src="./img/logo__full-footer.png" alt=""></a></i>
+                <div class="nav__content">
+                  <div class="nav__list-menu">
+                    <ul>
+                      <li><a href="./index.html">Furnitown</a></li>
+                      <li><a href="./product.html">Sản phẩm</a></li>
+                      <li><a href="./dichvu.html">Dịch vụ</a></li>
+                      <li><a href="./project.html">Dự án</a></li>
+                      <li><a href="./contact.html">Liên hệ</a></li>
+                    </ul>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
+          <div class="logo-right">
+            <i
+              ><a href="/index.html"
+                ><img src="./img/logo__full-footer.png" alt="" /></a
+            ></i>
+          </div>
         </div>
+      </div>
     </header>
 
     <!-- MAIN -->
     <main class="mainwrapper">
-        <!-- Example HTML -->
-        <section class="contact__page">
-            <div class="bg__top">
-                <div class="header__mini">
-                    <p>Furnitown</p>
-                    <div class="share">
-                        <p>share</p>
-                        <i><img src="./img/arrow__trang.png" alt=""></i>
-                    </div>
-                </div>
-                <div class="menu__homepage menu__homepage-contact">
-                    <i><img src="./img/logo_icon.png" alt=""></i>
-                    <div class="menu__mobile">
-                        <span></span>
-                    </div>   
-                </div>
-                <div class="menu__homepage-hover menu__contactpage-hover">
-                    <div class="wapper__content">
-                        <i><img src="./img/logo__full-product-detail.png" alt=""></i>
-                        <p>Menu</p>
-                    </div>
-                </div>
-                <div class="nav__menu nav__menu-contact">
-                    <div class="nav__header">
-                        <p>Furnitown</p>
-                        <div class="followus">
-                            <p>Follow us</p>
-                            <i><img src="./img/email.png" alt=""></i>
-                            <i><img src="./img/facebook.png" alt=""></i>
-                        </div>
-                    </div>
-                    <div class="nav__content">
-                        <div class="nav__icon">
-                            <i><img src="./img/logo_icon.png" alt=""></i>
-                            <div class="close__btn">
-                                <span></span>
-                            </div>
-                        </div>
-                        <div class="nav__list-menu">
-                            <ul>
-                                <li><a href="./index.html">Furnitown</a></li>
-                                <li><a href="./product.html">Sản phẩm</a></li>
-                                <li><a href="./dichvu.html">Dịch vụ</a></li>
-                                <li><a href="./project.html">Dự án</a></li>
-                                <li><a href="./contact.html">Liên hệ</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="container container__bg--contact">
-                    <div class="title__contact-form">
-                        <div class="title__contact-left">
-                            <h2>Liên hệ với chúng tôi</h2>
-                            <p class="param">
-                                Chúng tôi luôn sẵn sàng để phục vụ bạn 24/24 tư vấn và cập nhật 
-                                thông tin sản phẩm một cách nhanh nhất và chuyên nghiệp nhất
-                            </p>
-                            <p>
-                                Bạn cần thông tin tư vấn, xin vui lòng nhập thông tin cá nhân tại đây :
-                            </p>
-                        </div>
-                        <div class="title__contact-right">
-                            <div class="title__contact-mini-top">
-                                <div class="hotline">
-                                    <h2>Hotline</h2>
-                                    <p>0937.168.938</p>
-                                </div>
-                                <div class="email">
-                                    <h2>Email</h2>
-                                    <p>noithatfunitown@gmail.com</p>
-                                </div>
-                            </div>
-                            <div class="title__contact-mini-bottom">
-                                <h2>Địa chỉ</h2>
-                                <p>
-                                    Số 7/22A, Ấp 6, xã Đông Thạnh, huyện Hóc Môn, 
-                                    thành phố Hồ Chí Minh.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form__contact">
-                        <div class="form__contact-left">
-                            <form action="">
-                                <div class="form__group">
-                                    <label for="">Tên khách hàng</label>
-                                    <input type="text">
-                                </div>
-                                <div class="form__group">
-                                    <label for="">Email</label>
-                                    <input type="text">
-                                </div>
-                                <div class="form__group">
-                                    <label for="">Số điện thoại</label>
-                                    <input type="text">
-                                </div>
-                            </form>
-                        </div>
-                        <div class="form__contact-right">
-                            <form action="">
-                                <div class="form__group">
-                                    <label class="label__adress" for="">Địa chỉ</label>
-                                    <input class="adress" type="text">
-                                </div>
-                                <div class="form__group">
-                                    <label for="">Nội dung</label>
-                                    <textarea name="" id="" cols="30" rows="4"></textarea>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+      <!-- Example HTML -->
+      <section class="contact__page">
+        <div class="bg__top">
+          <img src="./img/bg__contact.jpg" alt="image background" />
+          <div class="header__mini">
+            <p>Furnitown</p>
+            <div class="share">
+              <p>share</p>
+              <i><img src="./img/arrow__trang.png" alt="" /></i>
             </div>
-        </section>
+          </div>
+          <div class="menu__homepage menu__homepage-contact">
+            <i><img src="./img/logo_icon.png" alt="" /></i>
+            <div class="menu__mobile">
+              <span></span>
+            </div>
+          </div>
+          <div class="menu__homepage-hover menu__contactpage-hover">
+            <div class="wapper__content">
+              <i><img src="./img/logo__full-product-detail.png" alt="" /></i>
+              <p>Menu</p>
+            </div>
+          </div>
+          <div class="nav__menu nav__menu-contact">
+            <div class="nav__header">
+              <p>Furnitown</p>
+              <div class="followus">
+                <p>Follow us</p>
+                <i><img src="./img/email.png" alt="" /></i>
+                <i><img src="./img/facebook.png" alt="" /></i>
+              </div>
+            </div>
+            <div class="nav__content">
+              <div class="nav__icon">
+                <i><img src="./img/logo_icon.png" alt="" /></i>
+                <div class="close__btn">
+                  <span></span>
+                </div>
+              </div>
+              <div class="nav__list-menu">
+                <ul>
+                  <li><a href="./index.html">Furnitown</a></li>
+                  <li><a href="./product.html">Sản phẩm</a></li>
+                  <li><a href="./dichvu.html">Dịch vụ</a></li>
+                  <li><a href="./project.html">Dự án</a></li>
+                  <li><a href="./contact.html">Liên hệ</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="container container__bg--contact">
+            <div class="title__contact-form">
+              <div class="title__contact-left">
+                <h2>Liên hệ với chúng tôi</h2>
+                <p class="param">
+                  Chúng tôi luôn sẵn sàng để phục vụ bạn 24/24 tư vấn và cập
+                  nhật thông tin sản phẩm một cách nhanh nhất và chuyên nghiệp
+                  nhất
+                </p>
+                <p>
+                  Bạn cần thông tin tư vấn, xin vui lòng nhập thông tin cá nhân
+                  tại đây :
+                </p>
+              </div>
+              <div class="title__contact-right">
+                <div class="title__contact-mini-top">
+                  <div class="hotline">
+                    <h2>Hotline</h2>
+                    <p>0937.168.938</p>
+                  </div>
+                  <div class="email">
+                    <h2>Email</h2>
+                    <p>noithatfunitown@gmail.com</p>
+                  </div>
+                </div>
+                <div class="title__contact-mini-bottom">
+                  <h2>Địa chỉ</h2>
+                  <p>
+                    Số 7/22A, Ấp 6, xã Đông Thạnh, huyện Hóc Môn, thành phố Hồ
+                    Chí Minh.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="form__contact">
+              <div class="form__contact-left">
+                <form action="">
+                  <div class="form__group">
+                    <label for="">Tên khách hàng</label>
+                    <input type="text" />
+                  </div>
+                  <div class="form__group">
+                    <label for="">Email</label>
+                    <input type="text" />
+                  </div>
+                  <div class="form__group">
+                    <label for="">Số điện thoại</label>
+                    <input type="text" />
+                  </div>
+                </form>
+              </div>
+              <div class="form__contact-right">
+                <form action="">
+                  <div class="form__group">
+                    <label class="label__adress" for="">Địa chỉ</label>
+                    <input class="adress" type="text" />
+                  </div>
+                  <div class="form__group">
+                    <label for="">Nội dung</label>
+                    <textarea name="" id="" cols="30" rows="4"></textarea>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- FOOTER -->
     <footer>
-        <div class="footer__homepage --product_footer">
-           <div class="container">
-                <div class="logo__footer --padding_footer">
-                    <img src="./img/logo__full-footer.png" alt="">
-                </div>
-                <div class="text__footer">
-                    <div class="text__footer-contact">
-                        <div class="text">
-                            <p>Thời gian mở cửa: 8h - 18h  - Thứ 2 đến Chủ nhật</p>
-                            <p>Số 7/22A, Ấp 6, xã Đông Thạnh, huyện Hóc Môn, thành phố Hồ Chí Minh</p>
-                            <p>Hotline: 0937.168.938</p>
-                            <p>Email: noithatfunitown@gmail.com</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="backtotop backtotop__product">
-                    <span>Back to top</span>
-                </div>
-           </div>
+      <div class="footer__homepage --product_footer">
+        <div class="container">
+          <div class="logo__footer --padding_footer">
+            <img src="./img/logo__full-footer.png" alt="" />
+          </div>
+          <div class="text__footer">
+            <div class="text__footer-contact">
+              <div class="text">
+                <p>Thời gian mở cửa: 8h - 18h - Thứ 2 đến Chủ nhật</p>
+                <p>
+                  Số 7/22A, Ấp 6, xã Đông Thạnh, huyện Hóc Môn, thành phố Hồ Chí
+                  Minh
+                </p>
+                <p>Hotline: 0937.168.938</p>
+                <p>Email: noithatfunitown@gmail.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="backtotop backtotop__product">
+            <span>Back to top</span>
+          </div>
         </div>
+      </div>
     </footer>
 
     <script type="text/javascript" src="dest/jsmain.min.js"></script>
     <script type="text/javascript" src="dest/contact.js"></script>
-
-</body>
-
+  </body>
 </html>
