update responsive siler and footer

--- a/dichvu.html
+++ b/dichvu.html
@@ -21,11 +21,9 @@
     <meta property="og:site_name" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="stylesheet" href="dest/style.min.css" />
     <link rel="stylesheet" href="dest/fonts.css" />
+    <link rel="stylesheet" href="dest/style.min.css" />
   </head>
-
-  <!-- Mỗi body của mỗi page nên có class ví dụ homepage, aboutpage, contactpage... -->
 
   <body class="contactpage">
     <!-- HEADER -->
@@ -92,7 +90,6 @@
 
     <!-- MAIN -->
     <main class="mainwrapper">
-      <!-- Example HTML -->
       <section class="dichvu__page-heading">
         <div class="header-mini">
           <p>Furnitown</p>
@@ -185,7 +182,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="footer__homepage --dichvu">
+      <div class="footer__homepage --footer400">
         <div class="container">
           <div class="logo__footer">
             <img src="./img/logo__full-footer.png" alt="" />
@@ -199,7 +196,9 @@
                   Minh
                 </p>
                 <p>Hotline: 0937.168.938</p>
-                <p>Email: noithatfunitown@gmail.com</p>
+                <p class="email">
+                  Email:<a href="#">noithatfunitown@gmail.com</a>
+                </p>
               </div>
             </div>
           </div>
