--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <meta property="og:site_name" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="stylesheet" href="dest/style.min.css" />
-    <link rel="stylesheet" href="dest/fonts.css" />
     <link rel="stylesheet" href="./dest/flickity.css" />
     <link href="./fonts/fontawesome/css/all.css" rel="stylesheet" />
+    <link rel="stylesheet" href="dest/fonts.css" />
+    <link rel="stylesheet" href="dest/style.min.css" />
   </head>
 
   <body class="homepage">
@@ -295,7 +295,9 @@
                   Minh
                 </p>
                 <p>Hotline: 0937.168.938</p>
-                <p>Email: noithatfunitown@gmail.com</p>
+                <p class="email">
+                  Email:<a href="#">noithatfunitown@gmail.com</a>
+                </p>
               </div>
             </div>
           </div>
@@ -305,12 +307,11 @@
         </div>
       </div>
     </footer>
-
-    <script type="text/javascript" src="dest/jsmain.min.js"></script>
-    <script type="text/javascript" src="dest/main.js"></script>
     <script
       type="text/javascript"
       src="./js/libs/flickity.pkgd.min.js"
     ></script>
+    <script type="text/javascript" src="dest/jsmain.min.js"></script>
+    <script type="text/javascript" src="dest/main.js"></script>
   </body>
 </html>
