--- a/news.html
+++ b/news.html
@@ -21,8 +21,8 @@
     <meta property="og:site_name" content="" />
     <meta property="og:image" content="" />
 
-    <link rel="stylesheet" href="dest/style.min.css" />
     <link rel="stylesheet" href="dest/fonts.css" />
+    <link rel="stylesheet" href="dest/style.min.css" />
   </head>
 
   <body class="contactpage">
@@ -793,9 +793,9 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="footer__homepage --product_footer">
+      <div class="footer__homepage --footer400">
         <div class="container">
-          <div class="logo__footer --padding_footer">
+          <div class="logo__footer">
             <img src="./img/logo__full-footer.png" alt="" />
           </div>
           <div class="text__footer">
@@ -807,11 +807,13 @@
                   Minh
                 </p>
                 <p>Hotline: 0937.168.938</p>
-                <p>Email: noithatfunitown@gmail.com</p>
+                <p class="email">
+                  Email:<a href="#">noithatfunitown@gmail.com</a>
+                </p>
               </div>
             </div>
           </div>
-          <div class="backtotop backtotop__product">
+          <div class="backtotop">
             <span>Back to top</span>
           </div>
         </div>
