--- a/project.html
+++ b/project.html
@@ -26,8 +26,6 @@
     <link href="./fonts/fontawesome/css/all.css" rel="stylesheet" />
   </head>
 
-  <!-- Mỗi body của mỗi page nên có class ví dụ homepage, aboutpage, contactpage... -->
-
   <body class="contactpage">
     <!-- HEADER -->
     <header>
@@ -93,7 +91,6 @@
 
     <!-- MAIN -->
     <main class="mainwrapper">
-      <!-- Example HTML -->
       <section class="project__page-heading">
         <div class="header-mini">
           <p>Furnitown</p>
@@ -618,9 +615,9 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="footer__homepage --product_footer">
+      <div class="footer__homepage --footer400">
         <div class="container">
-          <div class="logo__footer --padding_footer">
+          <div class="logo__footer">
             <img src="./img/logo__full-footer.png" alt="" />
           </div>
           <div class="text__footer">
@@ -632,11 +629,13 @@
                   Minh
                 </p>
                 <p>Hotline: 0937.168.938</p>
-                <p>Email: noithatfunitown@gmail.com</p>
+                <p class="email">
+                  Email:<a href="#">noithatfunitown@gmail.com</a>
+                </p>
               </div>
             </div>
           </div>
-          <div class="backtotop backtotop__product">
+          <div class="backtotop">
             <span>Back to top</span>
           </div>
         </div>
