update tag a logo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </ul>
           </div>
           <div class="logo">
-            <img src="./img/logo__full-footer.png" alt="" />
+            <a href="./index.html">
+              <img src="./img/logo__full-footer.png" alt="" />
+            </a>
           </div>
           <div class="menu__right">
             <ul>
